Added images and text

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
 	<style>
  body{
 	font-family: 'Merriweather', serif;
+	padding:15px;
  }
  .image-lg{
-     width: 25em;
+     width: 20em;
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+ }
+ 
+ .image-xlg{
+     width: 35em;
      display: block;
      margin-left: auto;
      margin-right: auto;
@@ -89,7 +97,7 @@
 <body>
     <nav style="position:fixed">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Jude Ampfer</a>
+            <a class="navbar-brand" href="#"><h3>Jude Ampfer</h3></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -114,19 +122,21 @@
 
     <section id="first">
 		<!--a first section with your picture and a sentence that describes you professionally.-->
-        <img class="image-lg" src="assets/img/jude.jpg" />
+        <h1 class="center">Jude Ampfer</h1>
+		<img class="image-lg" src="assets/img/jude.jpg" />
         <p class="center">
-            Look how great he is!Look how great he is!Look how great he is!Look how great he is!Look how great he is!Look how great he is!
-            Look how great he is!Look how great he is!Look how great he is!Look how great he is!Look how great he is!Look how great he is!
+            Senior Year Marketing and BIS Double Major at Northern Kentucky University
         </p>
     </section>
     
     <article class="center" id="About Me">
         <!-- second section containing your bio (one or two paragraphs) and highlighting your achievements. -->
         <h1>About Me</h1>
-        <p>wjedbqweklfbwl fhblkfhbwf khbwrfbqw efbjwrk bfkwrbfkw bfhjbqwkfbqwe kjrfiqwbfibwrj fberkjfbkjw rfkjw erfkjbw rkjfbkre jfbke wrfbkewrbg
-        djbqwekdbwq fiwqfbqwe fjqwbfqwk fnqw fhwkjf nw fnkqw fnbqwekf qwnkfbqw fqwnrjk qwmr qwnrnqw rkqwnrkn 2r</p>
-        
+        <p>I am 22 years old and will be graduating from NKU in the spring of 2023. Throughout my time at NKU, I have accomplished many things. My Junior year,
+		I was one of the Head Orientation Leaders where I managed and oversaw a staff of 31 Orientation Leaders. Together, we facilitated 17 orientation programs
+		for first time freshmen, in total serving over 1,000 incoming students. Currently, I am the social media and communications intern for the Office of 
+		Admissions at NKU where I create and post content that showcases the best parts of the University. Upon graduation, I plan to attend grad school at
+		NKU in the fall where I will study Business Informatics with a focus in Analytics.</p>
     </article>
 
     <section class="center" id="Skills">
@@ -135,36 +145,49 @@
         <h3>
 			<ol start="1" class="list">
 				<li>
-					 I like banana
+					 Microsoft Office Suite
 				</li>
 			</ol>
 		</h3>
-		<img class="image-m" src="assets/img/jude.jpg" />
-		<p>Jude loves bananas. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-		qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-		jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
+		<img class="image-lg" src="assets/img/office.jpg" />
+		<p>I have extensive experience in Office Suite. In Excel, I've created spreadsheets to document and solve different business problems. I have experience
+		with Solver and chart & graph creation. 
+		I've also designed and presented my own Powerpoint Presentations in front of audiences of 40+ people.</p>
 		<h3>
 			<ol start="2" class="list">
 				<li>
-					 I like banana
+					 Digital Content Creation
 				</li>
 			</ol>
 		</h3>
-		<img class="image-m" src="assets/img/jude.jpg" />
-		<p>Jude loves bananas. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-		qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-		jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
+		<div class="row">
+				<div class="column">
+					<img class="image-lg" src="assets/img/Tableau.png"/>
+					&nbsp
+					<img class="image-lg" src="assets/img/canva.jpg"/>
+				</div>
+				<div class="column">
+					<img class="image-m" src="assets/img/2_1.png"/>
+					&nbsp
+					<img class="image-m" src="assets/img/1_19.png"/>
+				</div>
+			</div>
+		<p>I spent a semester with Tableau during the spring of 2022 at NKU. In the course, I learned how to design intutive and engaging dashboards.
+		Ultimately, the class concluded when my team and I completed a project for St. Vincent DePaul in which we visualized their pharmacy dataset
+		to discover patterns in their business. During my time at NKU, I have also created and posted content for 3 social media accounts accross 
+		multiple platforms. These accounts include @BeaNorse, @nkusigep, and @nkuorientation. I've used Canva and Google Forms to spotlight 
+		different people in each organization and design posts that cater to the needs of each individual account.</p>
 		<h3>
 			<ol start="3" class="list">
 				<li>
-					 I like banana
+					 Presentation and Communication
 				</li>
 			</ol>
 		</h3>
-		<img class="image-m" src="assets/img/jude.jpg" />
-		<p>Jude loves bananas. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-		qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-		jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
+		<img class="image-lg" src="assets/img/head ol.png" />
+		<p>As one of the Head Orientation Leaders, I presented in front of groups of 200 students and families during all of NKU's summer Orientation programs.
+		I have also facilitated over 30 tours of NKU as an admissions employee. This means that I am very comfortable presenting in front of large groups of 
+		people.</p>
 
     </section>
 
@@ -175,58 +198,48 @@
 		<h3>Playing the drums</h3>
 			<div class="row">
 				<div class="column">
-					<img class="image-m" src="assets/img/jude.jpg"/>
+					<img class="image-xlg" src="assets/img/drum.jpg"/>
 				</div>
 				<div class="column">
-					<img class="image-m" src="assets/img/jude.jpg"/>
+					<img class="image-lg" src="assets/img/drum2.png"/>
 				</div>
 			</div>
 			<p>I love playing the drums. I got my first drumset when I was a senior in high school and have been playing ever since. After moving into an
 			apartment, I quickly discovered that drumsets become much louder when played in the garage. Because of this, I got an electric kit, which is much quieter
 			and allows for headphones. While it does not come close to the sensation of playing real drums, I enjoy discovering the various different 
 			pre-loaded sounds and music clips stored in the instrument's memory.</p>
-		<h3>Playing the drums</h3>
-			<img class="image-m" src="assets/img/jude.jpg"/>
-			<p>Jude loves the drums. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-			qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-			jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
-		<h3>Playing the drums</h3>
-			<img class="image-m" src="assets/img/jude.jpg"/>
-			<p>Jude loves the drums. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-			qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-			jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
-		<h3>Playing the drums</h3>
-			<img class="image-m" src="assets/img/jude.jpg"/>
-			<p>Jude loves the drums. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-			qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-			jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
-		<h3>Playing the drums</h3>
-			<img class="image-m" src="assets/img/jude.jpg"/>
-			<p>Jude loves the drums. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-			qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-			jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
-		<h3>Playing the drums</h3>
-			<img class="image-m" src="assets/img/jude.jpg"/>
-			<p>Jude loves the drums. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-			qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-			jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
-		<h3>Playing the drums</h3>
-			<img class="image-m" src="assets/img/jude.jpg"/>
-			<p>Jude loves the drums. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-			qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-			jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
-		<h3>Playing the drums</h3>
-			<img class="image-m" src="assets/img/jude.jpg"/>
-			<p>Jude loves the drums. wfjbqwekjfbwefwekjfbwekr rnqeerkbqkjrqrbqwr reqwrbqkjerkqwejrqwe ejrhwqekjhrkqwebrkqwer ejrwqekjrbqw
-			qdjqwekd qwekdbwej wedwef fjern gek gkn gkn gtkn gtn gtn gtn er ng eg r tkqwernwelrbjkqwerjqwekr fwef wqef wqefnklwerwq r wqer wer
-			jwerjkqwrweqkrkjwefkjbwfjweflwefwe k</p>
+		<h3>Listening to Music</h3>
+			<div class="row">
+				<div class="column">
+					<img class="image-lg" src="assets/img/beatles.jpg"/>
+					&nbsp
+					<img class="image-lg" src="assets/img/zeppelin.jpg"/>
+				</div>
+				<div class="column">
+					<img class="image-lg" src="assets/img/thundercat.jpg"/>
+					&nbsp
+					<img class="image-lg" src="assets/img/otis.jfif"/>
+				</div>
+			</div>
+			<p>Listening to music is one of my favorite pastimes. Whether it's doing homework, driving to work, or cooking dinner, I love to have music
+			accompany my life. Some of my favorite groups and artists include The Beatles, Led Zeppelin, Thundercat, and Otis McDonald.</p>
+		<h3>Playing the Piano</h3>
+			<img class="image-lg" src="assets/img/piano.png"/>
+			<p>In my spare time, I also like to play the piano. Though I don't know how to site-read, you can find me learning new songs through YouTube
+			videos or Synthesia tutorials. Paul McCartney is one of my big inspirations for piano playing. Some of my favorite songs to play include
+			<i>Martha My Dear </i> by The Beatles, <i>Nineteen-Hundred and Eighty-Five </i> by Wings, and <i>Listen to What the Man Said </i> by Wings.</p>
+		<h3>Playing Video Games</h3>
+			<img class="image-lg" src="assets/img/earthbound.jpg"/>
+			<p>Occasionally, I will play some video games in my spare time. Recently, I've started the game <i>Earthbound </i> for the Super Nintendo.
+			Originally an obscure RPG from the 1990's, Earthbound has grown into a cult classic since its release nearly 30 years ago. I also enjoy
+			Super Smash Bros, F-Zero, and Super Mario Party.</p>
     </section>
 
     <section class=center id="Send a Message">
         <!--a fifth section that contains a contact form with the relevant fields for sending you a message 
             (you are not required to have a working contact form, but the fields should be there)-->
 		<h1>Send a Message</h1>
-		<p>Want to send me a message? Fil out this form and I'll get back to you in 24-48 hours!</p>
+		<p>Want to send me a message? Fill out this form and I'll get back to you within 24-48 hours!</p>
 		<form>
 			First Name:
 			<div>
@@ -242,7 +255,7 @@
 			</div>
 			Message:
 			<div>
-				<input type="text" name="message" />
+				<textarea name="message" cols="40" rows="5"></textarea>
 			</div>
 			<button type="Submit">
 				Submit
