--- a/index.html
+++ b/index.html
@@ -14,85 +14,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Secular+One&display=swap" rel="stylesheet">
 	
-	<style>
- body{
-	font-family: 'Merriweather', serif;
-	padding:15px;
- }
- .image-lg{
-     width: 20em;
-     display: block;
-     margin-left: auto;
-     margin-right: auto;
- }
- 
- .image-xlg{
-     width: 35em;
-     display: block;
-     margin-left: auto;
-     margin-right: auto;
- }
- 
- .image-m{
-     width: 15em;
-     display: block;
-     margin-left: auto;
-     margin-right: auto;
- }
- .image-s{
-	width: 4em;
- }
- 
- h1{
-	font-size:4em;
-	font-family: 'Secular One', sans-serif;
- }
-
- h3{
-     font-size:2em;
-	 font-family: 'Secular One', sans-serif;
- }
-
- .center{
-     text-align:center;
- }
-
- p{
-     font-size:1.3em;
- }
- 
- .list{
-	display: inline-block;
-	text-align: left;
- }
- 
- .row{
-		display:flex
- }
- 
- .column{
-		flex: 33%;
-		padding: 5px;
- }
-@media screen and (max-width: 900px) {
-		#Contact {
-			background-color: lightgreen;
-		}
-	}
-
-@media screen and (max-width: 900px) and (min-width: 600px) {
-		#first {
-			background-color: blue;
-		}
-	}
-
-@media screen and (max-width: 600px) {
-		body {
-			background-color: pink;
-		}
-	}
- 
-    </style>
+	<!-- External CSS -->
+	<link rel="stylesheet" href="assets/css/css.css">
 </head>
 <body>
     <nav style="position:fixed">
