Added Title and Icon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<title>Jude Ampfer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,6 +17,9 @@
 	
 	<!-- External CSS -->
 	<link rel="stylesheet" href="assets/css/css.css">
+	
+	<!-- Icon -->
+	<link rel="shortcut icon" href="assets/img/icon.png">
 </head>
 <body>
     <nav style="position:fixed">
